Fix header layout alignment bugs

--- a/web/html/src/branding/css/base/notifications.scss
+++ b/web/html/src/branding/css/base/notifications.scss
@@ -12,7 +12,7 @@
     background-color: $notification-badge;
     position: absolute;
     left: 19px;
-    top: -2px;
+    top: -5px;
     color: #333;
     font-size: 0.9em;
     min-width: 19px;
