--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -295,6 +295,7 @@ nav.navbar-pf {
       display: flex;
       flex-direction: column;
       gap: 4px;
+      margin: 0;
     }
     input[type="search"],
     select.form-control {
