--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -292,6 +292,7 @@ nav.navbar-pf {
       display: flex;
       flex-direction: column;
       gap: 4px;
+      margin: 0;
     }
     input[type="search"],
     select.form-control {
