--- a/web/html/src/branding/css/susemanager/components/header.less
+++ b/web/html/src/branding/css/susemanager/components/header.less
@@ -55,6 +55,7 @@
   }
 
   a {
+    position: relative;
     display: flex !important;
     align-items: center;
     padding: 4px 12px !important;
