--- a/web/html/src/branding/css/susemanager/components/header.scss
+++ b/web/html/src/branding/css/susemanager/components/header.scss
@@ -59,6 +59,7 @@
   }
 
   a {
+    position: relative;
     display: flex !important;
     align-items: center;
     padding: 4px 12px !important;
